test/libsolidity/syntaxTests/nameAndTypeResolution/518_experimental_pragma_unknown_quoted_string_literal.sol
pragma experimental "unsupportedName";
// ----
// SyntaxError: (0-38): Unsupported experimental feature name.
